# windi-chat

./: .env.example  Dockerfile  README.md  pyproject.toml
src/windi_chat/core/: settings.py
src/windi_chat/domain/: aggregate_root.py  errors.py
src/windi_chat/domain/entities/: chat.py  message.py
src/windi_chat/domain/events/: chat.py
src/windi_chat/infrastructure/db/: session.py
src/windi_chat/presentation/api/: deps.py
tests/domain/: test_message.py
